fixed missing username and added z-index

--- a/src/Components/post/viewer/sub-components/_post-header.scss
+++ b/src/Components/post/viewer/sub-components/_post-header.scss
@@ -32,4 +32,7 @@
 
 .postheader-meta {
     padding-left: 5px;
+    a{
+        z-index: $modal-inner;
+    }
 }
