--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -75,6 +75,7 @@ $general-window: 24;
 $overlay: 10;
 $overlay-super: 35;
 $window-upper: 36;
+$modal-inner: 37;
 
 %title-texts {
     font-size: $primary-large-font-size;
